airsonic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airsonic
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 4040
      name: http
