airsonic/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: airsonic
spec:
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:R//spyIPjPSyrm1kcn5Vu9bgDm2+ZtAQcLJ9QQ==,iv:PsQogVvU5CpL3vLOETYHrPvpRlHNz4OPnrfMi24Y5xE=,tag:PsY0r5Bz4OComNxhIcRDmA==,type:str]
          middlewares: []
          services:
            - kind: Service
              name: airsonic
              port: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-09-26T20:26:44Z"
    mac: ENC[AES256_GCM,data:Ai/SzrLZOu74ct6BnnrA/gNzo/p84C6tKlkRlaKMsqA2R18sfHLRRuGpOSH+54PkUBoIrGcat7x/hG7cu8lCTC3A4RVIbbh3aWHG9rtAFZKj6nHX9o3ofc8QWvum7dF/thWyqQ0QBl9mAYSip5qs1RdyPKqaX5sA5td/YWV+DsA=,iv:Tx55vKibiPVesBROFjKFXlW5wg/lYAoDDPGJ9wiYAVs=,tag:EzT2L0DCHZTk+skGCRIhQQ==,type:str]
    pgp:
        - created_at: "2023-09-26T20:26:43Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAyyGYy7YCFAQARAAibE+VTUfLBGcB/QeNeq9lMhAUkZpejklUUDmUDUPHqMl
[...]
            73QLe4O+yAq/
            =0f1w
            -----END PGP MESSAGE-----
          fp: 75C3F62D6A9AA2165875F5C680A364E41D3C47AF
    encrypted_regex: ^(match)$
    version: 3.7.3
